--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -375,6 +375,7 @@
                 });
             });
 
+            <!--選び直すボタン-->
             const undoButton = document.getElementById('undoButton');
             undoButton.addEventListener('click', function() {
                 // リストから最後に選択された住所を削除
@@ -383,6 +384,7 @@
                 updateAddressList();
             });
 
+            <!--クリックした住所-->
             function updateAddressList() {
                 const addressList = document.getElementById('selectedAddresses');
                 addressList.innerHTML = '<h3>　目的地の順番：</h3>' +
