--- a/src/main/resources/templates/manager_login.html
+++ b/src/main/resources/templates/manager_login.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 <meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>ログイン画面</title>
 <link rel="stylesheet" href="../static/css/manager_login.css">
 <!--headerのjs-->
@@ -164,6 +165,14 @@ $(function($){
     h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
   })(document);
 </script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-13xxxxxxxxx"></script>
+<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'UA-13xxxxxxxxx');
+</script>
 </head>
 <body>
     <header id="header">
@@ -206,19 +215,26 @@ $(function($){
  <!-- ログインフォーム -->
  <!-- th:action は SecurityConfig の loginProcessingUrl で指定した URL -->
  
- <form th:action="@{authenticate}" method="post">
- <table>
- <tr>
- <th>ID</th>
- <td><input type="text" name="username" /></td>
- </tr>
- <tr>
- <th>PASSWORD</th>
- <td><input type="password" name="password" /></td>
- </tr>
- </table>
- <button type="button" onclick="location.href='manager_page.html'" >login</button>
- </form>
+ <div class="login-wrapper" id="login">
+	<div class="container">
+			<div class="login">
+					<div class="login-wrapper-title">
+							<h3 class ="lo-tittle">ログイン</h3>
+					</div>
+					<form class="login-form" th:action="@{authenticate}" method="post">
+							<div class="form-group">
+									<p>メールアドレス</p>
+									<input type="text" name="username" required>
+							</div>
+							<div class="form-group">
+									<p>パスワード</p>
+									<input type="password" name="password" required>
+							</div>
+							<div class="btn-box"><button type="submit" class="btn btn-submit" onclick="location.href='manager_page.html'">ログイン</button></div>
+					</form>
+			</div>
+	</div>
+</div>
  <div class="f_menu">
 		
 		
