--- a/src/main/resources/templates/purpose_osaka.html
+++ b/src/main/resources/templates/purpose_osaka.html
@@ -213,8 +213,8 @@
 						<ul class="nav">
 							<li><a href="">ボタン</a></li>
 							<li><a href="">ボタン</a></li>
-							<li><a href="" class="btn-sin">新規登録</a></li>
-							<li><a href="" class="btn-log">ログイン</a></li>
+							<li><a href="/Users/konkou/git/teamB/src/main/resources/templates/register.html" class="btn-sin">新規登録</a></li>
+							<li><a href="/Users/konkou/git/teamB/src/main/resources/templates/manager_login.html" class="btn-log">ログイン</a></li>
 						</ul>
 						<div class="mask"></div>
 					</nav>
@@ -233,8 +233,8 @@
 				<ul>
 					<li><a href="#nav01">ボタン</a></li>
 					<li><a href="#nav02">ボタン</a></li>
-					<li><a href="#nav03" class="btn-sin">新規登録</a></li>
-					<li><a href="#nav04" class="btn-log">ログイン</a></li>
+					<li><a href="/Users/konkou/git/teamB/src/main/resources/templates/register.html" class="btn-sin">新規登録</a></li>
+					<li><a href="/Users/konkou/git/teamB/src/main/resources/templates/manager_login.html" class="btn-log">ログイン</a></li>
 				</ul>
 			</div>
 		</div>
@@ -352,17 +352,12 @@
 			</dl>
 
 			<dl>
-				<dd>
-					<div class="btn-sin">新規登録</div>
-				</dd>
+				<dd><a href ="/Users/konkou/git/teamB/src/main/resources/templates/register.html"><div class="btn-sin">新規登録</div></a></dd>
 			</dl>
-
+			
 			<dl>
-				<dd>
-					<div class="btn-log">ログイン</div>
-				</dd>
+				<dd><a href="/Users/konkou/git/teamB/src/main/resources/templates/manager_login.html"><div class= "btn-log">ログイン</div></a></dd>
 			</dl>
-
 		</div>
 
 	</div>
