--- a/src/main/resources/static/css/i-style.css
+++ b/src/main/resources/static/css/i-style.css
@@ -551,7 +551,10 @@ footer .copyright{
 	font-weight: bold;
 	text-align: center;
 }
-
+.copyright {
+	position: absolute;
+	bottom: 0;
+  }    
 /*pc版--------------------------------------*/
 @media screen and (min-width:800px){
 	.i-logo{
@@ -586,6 +589,10 @@ footer .copyright{
 	color: #333333;
 	font-weight: bold;
 }
+.copyright {
+	position: absolute;
+	bottom: 0;
+  }    
 /* 日本地図 */
 
 #mapTbl{
