ログインページ編集 金光

--- a/src/main/resources/templates/manager_login.html
+++ b/src/main/resources/templates/manager_login.html
@@ -216,7 +216,7 @@ $(function($){
  <!-- th:action は SecurityConfig の loginProcessingUrl で指定した URL -->
  
  <div class="login-wrapper" id="login">
-	<div class="container">
+	<div class="containerds">
 			<div class="login">
 					<div class="login-wrapper-title">
 							<h3 class ="lo-tittle">ログイン</h3>
