--- a/src/main/resources/static/css/manager_login.css
+++ b/src/main/resources/static/css/manager_login.css
@@ -18,7 +18,7 @@ article,footer, header, menu, nav, section {
   font-weight: bold;
 }
 /* 共通CSS */
-.container {
+.containerds {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 15px;
