--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -242,11 +242,11 @@ $(function($){
                 </dl>
                 
                 <dl>
-                    <dd><a href ="src/main/resources/templates/register.html"><div class="btn-sin">新規登録</div></a></dd>
+                    <dd><a href ="register.html"><div class="btn-sin">新規登録</div></a></dd>
                 </dl>
                 
                 <dl>
-                    <dd><a href="src/main/resources/templates/manager_login.html"><div class= "btn-log">ログイン</div></a></dd>
+                    <dd><a href="manager_login.html"><div class= "btn-log">ログイン</div></a></dd>
                 </dl>
             
         </div>
