--- a/src/main/resources/templates/spot.html
+++ b/src/main/resources/templates/spot.html
@@ -258,7 +258,7 @@
 										<p class="ptag">
 											<input type="checkbox" name=“sample” value="1">[[${spot.spotName}]]
 										</p>
-										<div class="img_aberu">
+										<div class="img_taberu">
 											<img th:src="@{'/imag/'+${spot.imageFileName}}">
 										</div>
 									</a>
@@ -373,12 +373,6 @@
 					<div class="tabcontent" id="tabcontent3">
 						<h3 class="titleds">遊ぶ</h3>
 					
-								
-								
-						
-							
-						
-
 						<ul class="ul-class">
 							<div th:each="spot:${spotasobu}">
 								<li class="spot_asobu">
