--- a/src/main/resources/templates/manager_page.html
+++ b/src/main/resources/templates/manager_page.html
@@ -14,13 +14,13 @@
 	href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
 
 <!--headercss-->
-<link href="../static/css/meanmenu.css" rel="stylesheet" type="text/css">
-<link href="../static/css/font-awesome.min.css" rel="stylesheet"
+<link th:href="@{/css/meanmenu.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/font-awesome.min.css}" rel="stylesheet"
 	type="text/css">
-<link href="../static/css/header.css" rel="stylesheet" type="text/css">
+<link th:href="@{/css/header.css}" rel="stylesheet" type="text/css">
 <!--css-->
-<link href="../static/css/i-style.css" rel="stylesheet" type="text/css">
-<link href="../static/css/parts.css" rel="stylesheet" type="text/css">
+<link th:href="@{/css/i-style.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/parts.css}" rel="stylesheet" type="text/css">
 
 <!--font-awesome-->
 <link rel="stylesheet" type="text/css"
@@ -57,9 +57,8 @@
 <script type="text/javascript" src="js/scroll.js"></script>
 
 <!--slider-->
-<link href="../static/css/slick.css" rel="stylesheet" type="text/css">
-<link href="../static/css/slick-theme.css" rel="stylesheet"
-	type="text/css">
+<link th:href="@{/css/slick.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/slick-theme.css}" rel="stylesheet" type="text/css">
 
 <!--headerscript-->
 <script type="text/javascript">
@@ -200,7 +199,7 @@
 		<div class="container">
 			<div id="h_top">
 				<div class="h_logo">
-					<a href=""><img src="../imag/logo22.png" alt="" /></a>
+					<a href=""><img th:src="@{/imag/logo22.png}" alt="" /></a>
 				</div>
 				<div class="h_nav">
 					<nav id="gNav">
@@ -234,6 +233,12 @@
 		</div>
 	</header>
 
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 	<h1>oritabi</h1>
 	<hr>
 	<!-- ▼▼▼ 新規登録時のみ表示 ▼▼▼ -->
@@ -279,30 +284,26 @@
 		<p th:if="${#lists.isEmpty(costomerList)}">登録されている顧客情報はありません。</p>
 		<!-- △△△データが一件もない場合表示△△△ -->
 	</div>
-	<!-- th:if="${spotForm.newSpot}" -->
-	<div style="margin: 5px">
+	<!--  -->
+	<div th:if="${spotForm.newSpot}" style="margin: 5px">
 		<h3>
 			観光地スポット<br>
 		</h3>
 
 		<!-- ▼▼▼ Form ▼▼▼ -->
-		<!-- <form method="POST" th:action="${spotForm.newSpot}? @{/oritabi/insertSpot} : @{/oritabi/update}" th:object="${spotForm}"> -->
-		<form method="POST" th:action="@{/oritabi/insertSpot}"
+		<form method="POST"
+			th:action="${spotForm.newSpot}? @{/oritabi/insertSpot} : @{/oritabi/update}"
 			th:object="${spotForm}">
-			<!-- <label>観光地連番</label> -->
-			<!-- <input type="text" th:field="*{spotId}" /><br> -->
-			<label>観光地名</label>
-			 <input type="text" th:field="*{spotName}" /><br>
-			<label>観光地住所</label>
-			 <input type="text" th:field="*{address}"><br>
-			<label>WEBページ</label>
-			 <input type="text" th:field="*{web}"><br>
-			<label>電話番号</label>
-			 <input type="text" th:field="*{tel}"><br>
+			<!-- <form method="POST" th:action="@{/oritabi/insertSpot}" th:object="${spotForm}"> -->
+			<label th:unless="*{newSpot}">観光地連番</label> <input
+				th:unless="*{newSpot}" type="text" th:field="*{spotId}" /><br>
+			<label>観光地名</label> <input type="text" th:field="*{spotName}" /><br>
+			<label>観光地住所</label> <input type="text" th:field="*{address}"><br>
+			<label>WEBページ</label> <input type="text" th:field="*{web}"><br>
+			<label>電話番号</label> <input type="text" th:field="*{tel}"><br>
 			<label>オススメ</label><br>
-			<textarea rows="5" cols="50" th:field="*{point}"></textarea><br> 
-			<label>目的ID</label> 
-			<input type="text"
+			<textarea rows="5" cols="50" th:field="*{point}"></textarea>
+			<br> <label>目的ID</label> <input type="text"
 				th:field="*{purposeId}"><br> <label>画像URL</label> <input
 				type="text" th:field="*{imageFileName}"><br>
 			<div class="button006">
@@ -315,7 +316,7 @@
 		<p th:if="${spotDelComp}" th:text="${spotDelComp}"></p>
 		<p th:if="${msg}" th:text="${msg}"></p>
 
-		<!-- ▼▼▼ 顧客情報が1件でもあれば表示 ▼▼▼ -->
+		<!-- ▼▼▼ 観光地情報が1件でもあれば表示 ▼▼▼ -->
 		<script>
 			$(function() {
 				$(".E").click(function() {
@@ -350,7 +351,8 @@
 					<td th:text="${obj.tel}"></td>
 					<!-- 編集ボタン -->
 					<td>
-						<form method="GET" th:action="@{/oritabi/{spotId}(spotId=${obj.spotId})}">
+						<form method="GET"
+							th:action="@{/oritabi/{spotId}(spotId=${obj.spotId})}">
 							<input type="submit" value="編集">
 						</form>
 					</td>
@@ -417,11 +419,15 @@
 			</dl>
 
 			<dl>
-				<dd><a href ="register.html"><div class="btn-sin">新規登録</div></a></dd>
+				<dd>
+					<a href="register.html"><div class="btn-sin">新規登録</div></a>
+				</dd>
 			</dl>
-			
+
 			<dl>
-				<dd><a href="manager_login.html"><div class= "btn-log">ログイン</div></a></dd>
+				<dd>
+					<a href="manager_login.html"><div class="btn-log">ログイン</div></a>
+				</dd>
 			</dl>
 
 		</div>
