--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -235,14 +235,7 @@
 			</div>
 		</div>
 	</header>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-
-
+	
 	<div id="register" class="col s12">
 	<!-- ログインエラーのときはメッセージを表示 -->
 	<div th:if="${costomerForm != null}" th:text="${costomerForm}"></div>
@@ -260,27 +253,27 @@
 						</div>
 						<form class="login-form" th:action="@{authenticate}" method="post">
 							<div class="row">
-								<div class="input-field col s6">
-									<p>名前 <p class="req">必須</p></p><p class="req">必須</p>
+								<div class="form-group">
+									<p>名前<span class="req">必須</span></p>
 									<input id="name" type="name" class="validate" placeholder="山田" th:field="*{name}" autocomplete="name" required>
 								</div>
 							<div class="form-group">
-									<p>メールアドレス</p><p class="req">必須</p>
+									<p>メールアドレス<span class="req">必須</span></p>
 									<input class="mail" type="email" name="email" placeholder="test.test.com" th:field="*{mail}" autocomplete="email" required>
 							</div>
 							<div class="form-group">
-								<p>メールアドレス確認</p><p class="req">必須</p>
+								<p>メールアドレス確認<span class="req">必須</span></p>
 								<input class="mail" type="email" name="email" placeholder="test@test.com" th:field="*{mailView}" autocomplete="email" required>
 						</div>
 							<div class="form-group">
-									<p>パスワード</p><p class="req">必須</p>
+									<p>パスワード<span class="req">必須</span></p>
 									<input class="password" type="password" name="password" placeholder="123456" th:field="*{pass}" autocomplete="password" required>
 							</div>
-							<div class="form-group"><p class="req">必須</p>
-								<p>パスワード確認</p>
+							<div class="form-group">
+								<p>パスワード確認<span class="req">必須</span></p>
 								<input class="password" type="password" name="password" placeholder="123456" th:field="*{passView}" autocomplete="password" required>
 						</div>
-							<div class="btn-box"><button type="submit" class="btn btn-submit" onclick="location.href='spot.html'">登録</button>
+							<div class="btn-box"><button type="submit" class="btnds btn-submit" onclick="location.href='spot.html'">登録</button>
 				      </div>
 			</div>
 		</form>
